--- a/base.html
+++ b/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utg-8">
     <title>test demo</title>
-    <script src="js/decimal.js"></script>
     <script src="js/aframe.js"></script>
+    <script src="js/conectrl.js"></script>
     </head>
     <body>
         <a-scene vr-mode-ui="enabled:false">
@@ -16,8 +16,8 @@
             <a-image src="#target" position="0 1.6 -50" width="0.5" height="0.5"></a-image>
             <a-sky src="#sky"></a-sky>
             
-            <a-entity camera="userHeight: 1.6; fov:4.4563384" look-controls>
-                <a-cone color = "tomato" height="0.05" radius-bottom="0.02" radius-top="0" position="0 0.08 -3" rotation="0 0 0"></a-cone>
+            <a-entity camera="userHeight: 1.6; fov:4.4563384" look-controls id="basecam">
+                <a-cone color = "tomato" height="0.05" radius-bottom="0.02" radius-top="0" position="0 0.08 -3" rotation="0 0 0" id="cone"></a-cone>
             </a-entity>
         </a-scene>
     </body>
