方位指示修正

--- a/base.html
+++ b/base.html
@@ -17,7 +17,13 @@
             <a-sky src="#sky"></a-sky>
             
             <a-entity camera="userHeight: 1.6; fov:4.4563384" look-controls id="basecam">
-                <a-cone color = "tomato" height="0.05" radius-bottom="0.02" radius-top="0" position="0 0.08 -3" rotation="0 0 0" id="cone"></a-cone>
+                <a-entity position="0 0.08 -3" id="cone">
+                <a-cone color = "tomato" height="0.02" radius-bottom="0.01" radius-top="0" position="0 0.012 0" rotation="0 0 0"></a-cone>
+                <a-cone color = "#0000ff" height="0.02" radius-bottom="0.0095" radius-top="0" position="0 -0.012 0" rotation="180 0 0" id="cone"></a-cone>
+                </a-entity>
+                    <a-entity position="0 0.08 -3" id="directcone">
+                        <a-cone color = "tomato" height="0.008" radius-bottom="0.003" radius-top="0" position="0 0.02 0"></a-cone>
+                    </a-entity>
             </a-entity>
         </a-scene>
     </body>
