--- a/base.html
+++ b/base.html
@@ -22,7 +22,7 @@
                 <a-cone color = "#0000ff" height="0.02" radius-bottom="0.0095" radius-top="0" position="0 -0.012 0" rotation="180 0 0" id="cone"></a-cone>
                 </a-entity>
                     <a-entity position="0 0.08 -3" id="directcone">
-                        <a-cone color = "#ffffff" height="0.008" radius-bottom="0.003" radius-top="0" position="0 0.02 0"></a-cone>
+                        <a-cone color = "tomato" height="0.008" radius-bottom="0.003" radius-top="0" position="0 0.02 0"></a-cone>
                     </a-entity>
             </a-entity>
         </a-scene>
