--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html lang="ja">
 <head>
-    <meta charset="utg-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=720">
     <title>test demo</title>
     
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="js/vue.js"></script>
+    <script src="js/vue.min.js"></script>
     <script src="js/indexbridge.js"></script>
     
     </head>
