--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="js/vue.min.js"></script>
-    <script src="js/indexbridge.js"></script>
+    <!--<script src="js/indexbridge.js"></script>-->
     
     </head>
     <body style="width:100%;height:100%;background-color:#ccc">
