--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body style="width:100%;height:100%;background-color:#ccc">
         <div id="base_wrapper">
-        <iframe src="base.html" style="width:720px;height:100%;position:absolute;left:0;top:0;border:none" id="baseframe"></iframe>
+        <iframe src="base.html" id="baseframe"></iframe>
         <div id="scope">
             <iframe src="scope.html" id="scopeframe"></iframe>
         </div>
