--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </head>
     <body style="width:100%;height:100%;background-color:#ccc">
         <div id="base_wrapper">
-        <iframe src="base.html" id="baseframe"></iframe>
+        <iframe v-bind:src="basesrc" id="baseframe"></iframe>
         <div id="scope">
-            <iframe src="scope.html" id="scopeframe"></iframe>
+            <iframe v-bind:src="scopesrc" id="scopeframe"></iframe>
         </div>
         <div id="scopewaku">
             </div>
