--- a/base.html
+++ b/base.html
@@ -25,7 +25,7 @@
                 
             </a-entity>
             
-            <a-entity camera="userHeight: 1.6; fov:4.4563384; zoom:1" look-controls id="basecam">
+            <a-entity camera="userHeight: 1.6; fov:4.4563384; zoom:1; unko:10" look-controls id="basecam">
                 <a-entity position="0 0.08 -3" id="cone">
                 <a-cone color = "tomato" height="0.02" radius-bottom="0.006" radius-top="0" position="0 0.012 0" rotation="0 0 0"></a-cone>
                 <a-cone color = "#0000ff" height="0.02" radius-bottom="0.005" radius-top="0" position="0 -0.012 0" rotation="180 0 0" id="cone"></a-cone>
