--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <div id="scopewaku" v-bind:style="scopewaku" v-show="scopeWakuVis">
             </div>
             <div id="gard">
-                <!--<div id="deb" v-if="deb">
-                </div>-->
+                <div id="deb" v-if="deb">
+                </div>
                 <button id="menubut" v-if="!showMenu" v-on:click="showMenu=true">MENU</button>
                 <button id="clearbut" v-on:click="clearShoot">Clear</button>
+                <div id="dragSliderset"><div id="dragSliderbutt">&gt;|&lt;</div></div>
                 <div id="sliderset"><div id="sliderbutt"></div></div>
                 <button id="centerTrim" v-on:click="centerTrim()">[ ┼ ]</button>
             <div id="menu" v-if="showMenu">
