geomagnetic displacement corection

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <button id="menubut" v-if="!showMenu" v-on:click="showMenu=true">MENU</button>
                 <button id="clearbut" v-on:click="clearShoot">Clear</button>
-                <div id="dragSliderset"><div id="dragSliderbutt">&gt;|&lt;</div></div>
+                <div id="dragSliderset">Geomagnetic displacement correction<div id="dragSliderbutt">&gt;|&lt;</div></div>
                 <div id="sliderset"><div id="sliderbutt"></div></div>
                 <button id="centerTrim" v-on:click="centerTrim()">[ ┼ ]</button>
             <div id="menu" v-if="showMenu">
