--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>test demo</title>
     
+    <link rel="stylesheet" type="text/css" href="font/font.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/vue.js"></script>
