--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yews">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
     <title>test demo</title>
     
     <link rel="stylesheet" type="text/css" href="font/font.css">
