--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="ja" manifest="cache.manifest">
+<!--<html lang="ja" manifest="cache.manifest">-->
+<html lang="ja">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="font/font.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.mobile.custom.min.js"></script>
     <script src="js/vue.js"></script>
     <script src="js/indexbridge.js"></script>
     
@@ -177,6 +179,9 @@
             </div>
             </div>
             
+            <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
+                {{northDir}}tset
+            </div>
             </div>
     </body>
 </html>
