--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
             </div>
             
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
-                {{northDir}}tset
+                {{northDir}}<br>
+                {{orientation}}
             </div>
             </div>
     </body>
