--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
             
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
                 {{northDir}}<br>
-                {{orientation}}
+                {{orientation}}<br>
+                {{orientationRotate}}
+                                    
             </div>
             </div>
     </body>
