--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
                 {{northDir}}<br>
                 {{orientation}}<br>
-                {{orientationRotate}}
+                {{orientationRotate}}<br>
+                {{northDir-centerTrimDeg}}
                                     
             </div>
             </div>
