--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
                 {{northDir}}<br>
                 {{orientation}}<br>
                 {{orientationRotate}}<br>
-                {{northDir-centerTrimDeg}}
+                {{northDir-centerTrimDeg}}<br>
+                {{tmpData}}
                                     
             </div>
             </div>
