--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
             
             <div style="position:absolute;top:20vh;left:0;background-color:rgba(255,255,255,0.6);color:#000;font-size:3vh">
                 N:{{northDir}}<br>
-                TD:{{centerTrimDeg}}<br>
+                TD:{{Math.floor(centerTrimDeg)}}<br>
                 Itg:{{Math.floor(northDir-centerTrimDeg)}}<br>
-                Cy:{{tmpData}}
+                Cy:{{tmpData+1}}
                                     
             </div>
             </div>
